--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Lecture 1: Spatial Data Viz'
-output: github_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -10,12 +10,8 @@ knitr::opts_chunk$set(warning = FALSE)
 knitr::opts_chunk$set(fig.width = 7.5)
 knitr::opts_chunk$set(fig.height = 5.5)
 knitr::opts_chunk$set(fig.align = 'center')
-library(readr)
-library(ggmap)
-library(dplyr)
-library(knitr)
-library(rgdal)
-library(raster)
+library(tidyverse)
+library(leaflet)
 ```
 
 
@@ -60,14 +56,18 @@ In particular, some options include:
 
 ## Point Data: What is this?
 ```{r, fig.align= 'center'}
-uber <- read_csv('uber_coords.csv')
+set.seed(01082021)
+uber <- read_csv('uber_coords.csv') %>% sample_n(200)
+
 plot(y = uber$Lat, x=uber$Lon, xlab = 'Longitude', ylab = 'Latitude')
 ```
 
 
 ## Point Data: How about now?
-```{r}
-
+```{r, fig.cap = 'Hello?'}
+leaflet(uber) %>%
+  addTiles() %>%
+  addCircles(lng = ~Lon, lat = ~Lat, fillOpacity = .01)
 ```
 
 
