--- a/index.Rmd
+++ b/index.Rmd
@@ -59,7 +59,7 @@ In particular, some options include:
 ### Point Data: What is this?
 ```{r, fig.align= 'center'}
 set.seed(01082021)
-uber <- read_csv('uber_coords.csv') %>% sample_n(200)
+uber <- read_csv('https://raw.githubusercontent.com/Stat534/DataViz/main/uber_coords.csv') %>% sample_n(200)
 
 plot(y = uber$Lat, x=uber$Lon, xlab = 'Longitude', ylab = 'Latitude')
 ```
@@ -78,7 +78,7 @@ leaflet(uber) %>%
 Explore the Seattle police dataset (or a spatial dataset of your own) and leaflet to make an interactive data visualization.
 
 ```{r, message = T, echo = T}
-seattle <- read_csv('SeattlePolice.csv')
+seattle <- read_csv('https://raw.githubusercontent.com/Stat534/DataViz/main/SeattlePolice.csv')
 ```
 
 The [leaflet overview](https://rstudio.github.io/leaflet/) is a great resource for getting started.
